src/objects/Core_IPS_Product_Issue_Category__c.object
<CustomObject>
    <description>The Category and Subcategory values configured per Supported Product</description>
    <fields>
        <fullName>Case_Cat_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Core_Issue_Category_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case Category Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Core_Type__c</field>
                <operation>equals</operation>
                <value>Case Category</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Core_IPS_Master_Issue_Category__c</referenceTo>
        <relationshipLabel>Case Categories (Case Category Name)</relationshipLabel>
        <relationshipName>Product_Issue_Sub_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Issue_Sub_Category_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case Subcategory Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Core_IPS_Master_Issue_Category__c.Core_Type__c</field>
                <operation>equals</operation>
                <value>Case Subcategory</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Core_IPS_Master_Issue_Category__c</referenceTo>
        <relationshipLabel>Case Categories (Case Subcategory Name)</relationshipLabel>
        <relationshipName>Product_Issue_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Product_Issue_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Category</label>
        <referenceTo>Core_IPS_Product_Issue_Category__c</referenceTo>
        <relationshipName>Product_Issue_Sub_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Status__c</fullName>
        <inlineHelpText>Once set to Inactive, the status cannot be reversed. The status of related subcategories and environment details (if configured) is also set to Inactive.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Core_Supported_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supported Product</label>
        <referenceTo>Core_IPS_Supported_Product__c</referenceTo>
        <relationshipName>Product_Issue_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Case Category</fullName>
                </value>
                <value>
                    <fullName>Case Subcategory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Case Category</label>
    <nameField>
        <displayFormat>IC-{00000000}</displayFormat>
        <label>Case Category ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Categories</pluralLabel>
    <recordTypes>
        <fullName>Core_Product_Issue_Category</fullName>
        <active>true</active>
        <label>Case Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>Core_Product_Issue_SubCategory</fullName>
        <active>true</active>
        <label>Case Subcategory</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>